--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -17,16 +17,16 @@
 {% block content %}
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
-      <a class="nav-link" href="index.html">
+      <a class="nav-link" href="../advertisment/index.html">
         <span style="font-weight: bold;">Главная</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="top-sellers.html"><span style="font-weight: bold;">Топ продавцов</span>
+      <a class="nav-link" href="../advertisment/top-sellers.html"><span style="font-weight: bold;">Топ продавцов</span>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="advertisement-post.html">
+      <a class="nav-link" href="../advertisment/advertisement-post.html">
         <span style="font-weight: bold;">Разместить объявление</span>
       </a>
     </li>
