--- a/templates/advertisment/index.html
+++ b/templates/advertisment/index.html
@@ -3,17 +3,6 @@
 {% load static %}
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link href="{%static 'css/bootstrap.min.css' %}" rel="stylesheet">
-  <link rel="stylesheet" href="{%static 'css/fontello.css' %}">
-  <title>{% block title %} Главная {% endblock %}</title>
-</head>
-
-<body>
 {% block content %}
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
   <li class="nav-item">
@@ -73,6 +62,7 @@
     <span class="visually-hidden">Следующий</span>
   </button>
 </div>
+
 <div class="container" style="margin: 50px;">
   <div class="display-2">
     <span class="badge bg-primary">В центре внимания</span>
@@ -94,9 +84,9 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Еще что-нибудь</a>
       </li>
     </ul>
-    <form class="row g-3">
+    <form class="row g-3" method="get">
       <div class="col-auto w-50">
-        <input type="text" class="form-control">
+        <input name="query" value="{% if title %} {{ title }} {% endif %}" type="text" class="form-control">
       </div>
       <div class="col-auto">
         <button type="submit" class="btn btn-success mb-3">Найти</button>
@@ -108,18 +98,18 @@
     <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
+          <a href="{{ adv.get_absolute_url }}" class="nav-link">
             {% if adv.image %}
               <img src="{{ adv.image.url }}" class="img-fluid rounded-start" alt="Card title">
             {% else %}
-              <img src="{%  static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
+              <img src="{%static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
             {% endif %}
           </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="advertisement.html" class="nav-link">
+              <a href="{{ adv.get_absolute_url }}" class="nav-link">
                   <strong>{{ adv.title }}</strong></a>
             </h5>
             <a href="#" class="nav-link">
@@ -170,6 +160,6 @@
 </footer>
 {% endblock %}
 <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+
 
 </html>
