--- a/templates/advertisment/top-sellers.html
+++ b/templates/advertisment/top-sellers.html
@@ -3,17 +3,6 @@
 {% load static %}
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/fontello.css">
-  <title>Index</title>
-</head>
-
-<body>
 {% block content %}
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
@@ -60,28 +49,15 @@
   </div>
   <div class="container" style="min-height: 452px">
     <ul class="list-group list-group-numbered">
-
+      {% for user in users %}
       <li class="list-group-item d-flex justify-content-between align-items-start">
         <div class="ms-2 me-auto">
-          <div class="fw-bold">Ваня
+          <div class="fw-bold">{{ user }}
           </div>
         </div>
-        <span class="badge bg-primary rounded-pill">2</span>
+        <span class="badge bg-primary rounded-pill">{{ user.adv_count }}</span>
       </li>
-      <li class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="fw-bold">Петя
-          </div>
-        </div>
-        <span class="badge bg-primary rounded-pill">3</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-start">
-        <div class="ms-2 me-auto">
-          <div class="fw-bold">Гоша
-          </div>
-        </div>
-        <span class="badge bg-primary rounded-pill">3</span>
-      </li>
+      {% endfor %}
     </ul>
   </div>
   <footer style="padding: 100px;" class="bg-primary">
@@ -117,6 +93,5 @@
   </footer>
   <script src="js/bootstrap.bundle.min.js"></script>
 {% endblock %}
-</body>
 
 </html>
