--- a/templates/advertisment/advertisement.html
+++ b/templates/advertisment/advertisement.html
@@ -20,6 +20,7 @@
         <span style="font-weight: bold;">Разместить объявление</span>
       </a>
     </li>
+    {%  if not user.is_authenticated %}
     <li class="nav-item">
       <a class="nav-link" href="{% url 'register' %}">
         <span style="font-weight: bold;">Регистрация</span>
@@ -30,8 +31,9 @@
         <span style="font-weight: bold;">Войти</span>
       </a>
     </li>
+    {% else %}
     <li class="nav-item">
-      <a class="nav-link" href="{% url 'login' %}">
+      <a class="nav-link" href="{% url 'profile' %}">
         <span style="font-weight: bold;">Профиль</span>
       </a>
     </li>
@@ -40,6 +42,7 @@
         <span style="font-weight: bold;">Выйти</span>
       </a>
     </li>
+    {% endif %}
   </ul>
 
   <div class="container" style="margin: 50px;">
